--- a/lista-alumnos.html
+++ b/lista-alumnos.html
@@ -4,308 +4,262 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Lista de Alumnos • Graduación 2025</title>
-  <link rel="manifest" href="manifest.json">
-  <link rel="apple-touch-icon" href="icon-192.png">
-  <meta name="theme-color" content="#c41b2a">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Bebas+Neue&display=swap" rel="stylesheet">
   <style>
     :root {
+      --red-dark: #8B0000;
+      --red-main: #c41b2a;
+      --gold: #FFD700;
       --primary: #6366f1;
-      --primary-dark: #4f46e5;
-      --secondary: #ec4899;
-      --accent: #f59e0b;
-      --success: #10b981;
-      --error: #ef4444;
-      --text: #1f2937;
-      --light: #f8fafc;
+      --gray: #f1f5f9;
+      --text: #1e1b4b;
     }
-
     * { margin: 0; padding: 0; box-sizing: border-box; }
-
     body {
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-      background-size: 400% 400%;
-      animation: gradientBG 15s ease infinite;
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 20px 15px;
-    }
-
-    @keyframes gradientBG {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
-    .container {
-      background: rgba(255, 255, 255, 0.18);
-      backdrop-filter: blur(20px);
-      -webkit-backdrop-filter: blur(20px);
-      border: 1px solid rgba(255, 255, 255, 0.25);
-      width: 100%;
-      max-width: 900px;
-      border-radius: 28px;
-      overflow: hidden;
-      box-shadow: 0 25px 60px rgba(0,0,0,0.35);
-      position: relative;
-      z-index: 10;
-    }
-
-    .header {
-      background: linear-gradient(135deg, var(--primary), var(--secondary));
-      padding: 40px 30px;
-      text-align: center;
+      background: linear-gradient(135deg, #0f172a, #1e293b);
       color: white;
+      min-height: 100vh;
+      padding: 20px;
     }
-
+    .container {
+      max-width: 1100px;
+      margin: 0 auto;
+      background: rgba(255,255,255,0.1);
+      backdrop-filter: blur(20px);
+      border-radius: 20px;
+      overflow: hidden;
+      box-shadow: 0 20px 50px rgba(0,0,0,0.5);
+    }
+    .header {
+      background: linear-gradient(135deg, var(--red-dark), var(--red-main));
+      padding: 40px;
+      text-align: center;
+    }
     .header h1 {
-      font-size: clamp(24px, 6vw, 32px);
-      font-weight: 700;
-      margin-bottom: 8px;
-      text-shadow: 0 4px 15px rgba(0,0,0,0.4);
+      font-family: 'Bebas Neue', sans-serif;
+      font-size: 48px;
+      color: var(--gold);
+      text-shadow: 0 4px 20px rgba(0,0,0,0.8);
     }
-
+    .header p {
+      font-size: 18px;
+      margin-top: 10px;
+      opacity: 0.95;
+    }
     .content {
-      padding: 30px;
-      background: rgba(255,255,255,0.97);
+      padding: 40px;
     }
-
-    .input-group {
-      margin-bottom: 25px;
+    .controls {
+      margin-bottom: 30px;
+      text-align: center;
     }
-
-    label {
-      display: block;
-      margin-bottom: 8px;
-      color: #444;
-      font-weight: 600;
-      font-size: 16px;
-    }
-
     select {
-      width: 100%;
-      padding: 14px 16px;
-      border: 2px solid #e2e8f0;
-      border-radius: 16px;
-      font-size: 16px;
+      padding: 14px 20px;
+      font-size: 18px;
+      border-radius: 12px;
+      border: none;
       background: white;
-      transition: all 0.4s ease;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.06);
+      color: var(--text);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+      min-width: 300px;
+      cursor: pointer;
     }
-
-    select:focus {
-      outline: none;
-      border-color: var(--primary);
-      box-shadow: 0 0 0 5px rgba(99, 102, 241, 0.25);
+    select:focus { outline: none; box-shadow: 0 0 0 4px rgba(99,102,241,0.3); }
+    h3 {
+      text-align: center;
+      margin: 30px 0 20px;
+      font-size: 26px;
+      color: var(--gold);
     }
-
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-top: 20px;
       background: white;
+      color: var(--text);
       border-radius: 16px;
       overflow: hidden;
-      box-shadow: 0 8px 25px rgba(0,0,0,0.1);
+      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
     }
-
-    th, td {
-      padding: 14px 16px;
-      text-align: left;
-      border-bottom: 1px solid #e2e8f0;
-    }
-
     th {
-      background: linear-gradient(90deg, var(--primary), var(--secondary));
+      background: var(--red-main);
       color: white;
+      padding: 18px;
+      text-align: left;
       font-weight: 600;
+      font-size: 16px;
     }
-
-    tr:nth-child(even) {
-      background-color: #f8fafc;
+    td {
+      padding: 16px 18px;
+      border-bottom: 1px solid #eee;
     }
-
     tr:hover {
-      background-color: #f1f5f9;
+      background: #f8f9fa;
     }
-
+    .total {
+      text-align: center;
+      margin-top: 30px;
+      font-size: 20px;
+      color: var(--gold);
+      font-weight: bold;
+    }
+    .no-data {
+      text-align: center;
+      padding: 60px;
+      color: #999;
+      font-size: 20px;
+    }
     .loader {
-      display: none;
       text-align: center;
-      margin: 20px 0;
+      padding: 60px;
+      font-size: 22px;
+      color: var(--gold);
     }
-
-    .loader::after {
-      content: '';
-      width: 32px;
-      height: 32px;
-      border: 4px solid #f0f0f0;
-      border-top: 4px solid var(--primary);
-      border-radius: 50%;
-      display: inline-block;
-      animation: spin 0.8s linear infinite;
-    }
-
-    @keyframes spin {
-      to { transform: rotate(360deg); }
-    }
-
-    .message {
-      margin: 20px 0;
-      padding: 16px 20px;
-      border-radius: 16px;
-      text-align: center;
-      font-weight: 600;
-      display: none;
-      animation: slideDown 0.5s ease;
-    }
-
-    .message.error {
-      background: linear-gradient(90deg, #f8d7da, #f5b7b1);
-      color: var(--error);
-    }
-
-    @keyframes slideDown {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
     footer {
       text-align: center;
-      padding: 20px;
-      color: rgba(255,255,255,0.9);
+      padding: 30px;
+      color: rgba(255,255,255,0.7);
       font-size: 14px;
-      font-weight: 300;
-      backdrop-filter: blur(10px);
+      margin-top: 40px;
     }
   </style>
 </head>
 <body>
   <div class="container">
     <div class="header">
-      <h1>Lista de Alumnos</h1>
+      <h1>LISTA DE ALUMNOS REGISTRADOS</h1>
+      <p>Graduación 2025 • Universidad del Milenio</p>
     </div>
-
     <div class="content">
-      <div class="input-group">
-        <label for="carreraSelect">Selecciona una carrera:</label>
+      <div class="controls">
+        <label for="carreraSelect" style="display:block; margin-bottom:10px; font-size:18px;">
+          Filtrar por carrera:
+        </label>
         <select id="carreraSelect">
-          <option value="">-- Todas las carreras --</option>
-          <option value="Ingeniería en Sistemas">Ingeniería en Sistemas</option>
-          <option value="Ingeniería Industrial">Ingeniería Industrial</option>
-          <option value="Ingeniería Civil">Ingeniería Civil</option>
-          <option value="Arquitectura">Arquitectura</option>
-          <option value="Derecho">Derecho</option>
-          <option value="Medicina">Medicina</option>
-          <option value="Psicología">Psicología</option>
-          <option value="Administración">Administración</option>
-          <option value="Contaduría">Contaduría</option>
-          <option value="Otra">Otra</option>
+          <option value="">Todas las carreras</option>
+          <!-- Se llenan dinámicamente con JS -->
         </select>
       </div>
-
-      <div class="loader" id="loader"></div>
-      <div class="message" id="message"></div>
-
-      <div id="alumnosTableContainer">
-        <!-- Aquí se mostrará la tabla -->
-      </div>
+      <h3 id="tituloTabla">Todos los alumnos registrados</h3>
+      <div id="loader" class="loader">Cargando lista de alumnos...</div>
+      <table id="tablaAlumnos" style="display:none;">
+        <thead>
+          <tr>
+            <th>Matrícula</th>
+            <th>Nombre completo</th>
+            <th>Carrera</th>
+            <th>Correo institucional</th>
+          </tr>
+        </thead>
+        <tbody id="tablaBody">
+          <!-- Se llena con JS -->
+        </tbody>
+      </table>
+      <div class="total" id="totalAlumnos">Total: 0 alumnos</div>
     </div>
-
-    <footer>© 2025 Graduación • Todos los derechos reservados</footer>
+    <footer>
+      Sistema de Boletos • Graduación 2025<br>
+      Desarrollado con amor para la mejor generación
+    </footer>
   </div>
-
   <script>
     const DB_URL = "https://boletos-66dac-default-rtdb.firebaseio.com/users.json";
-    const carreraSelect = document.getElementById("carreraSelect");
-    const alumnosTableContainer = document.getElementById("alumnosTableContainer");
+    const selectCarrera = document.getElementById("carreraSelect");
+    const tablaBody = document.getElementById("tablaBody");
+    const tablaAlumnos = document.getElementById("tablaAlumnos");
     const loader = document.getElementById("loader");
-    const messageDiv = document.getElementById("message");
+    const tituloTabla = document.getElementById("tituloTabla");
+    const totalAlumnos = document.getElementById("totalAlumnos");
+    let todosLosAlumnos = [];
+    let conteoCarreras = {};
 
-    function showMessage(text, type = "error") {
-      messageDiv.textContent = text;
-      messageDiv.className = "message " + type;
-      messageDiv.style.display = "block";
-      setTimeout(() => messageDiv.style.display = "none", 5000);
-    }
-
-    async function getUsers() {
-      loader.style.display = "block";
+    // Cargar todos los alumnos y contar por carrera
+    async function cargarAlumnos() {
       try {
         const res = await fetch(DB_URL);
-        if (!res.ok) throw new Error("Error al cargar los datos");
-        const users = await res.json();
+        const data = await res.json();
+        if (!data) {
+          loader.textContent = "No hay alumnos registrados aún";
+          return;
+        }
+
+        // Procesar datos y contar por carrera
+        todosLosAlumnos = Object.entries(data).map(([id, info]) => ({
+          id,
+          matricula: info.matricula || "Sin matrícula",
+          nombre: info.nombre || "Sin nombre",
+          carrera: info.carrera || "No especificada",
+          email: info.email || "Sin correo"
+        })).sort((a, b) => a.nombre.localeCompare(b.nombre));
+
+        // Contar alumnos por carrera
+        conteoCarreras = {};
+        todosLosAlumnos.forEach(alumno => {
+          if (!conteoCarreras[alumno.carrera]) {
+            conteoCarreras[alumno.carrera] = 0;
+          }
+          conteoCarreras[alumno.carrera]++;
+        });
+
+        // Llenar el select con carreras y conteo
+        const carrerasUnicas = [...new Set(todosLosAlumnos.map(a => a.carrera))];
+        selectCarrera.innerHTML = '<option value="">Todas las carreras</option>';
+        carrerasUnicas.forEach(carrera => {
+          const option = document.createElement("option");
+          option.value = carrera;
+          option.textContent = `${carrera} (${conteoCarreras[carrera]})`;
+          selectCarrera.appendChild(option);
+        });
+
+        mostrarAlumnos(todosLosAlumnos);
         loader.style.display = "none";
-        return users;
+        tablaAlumnos.style.display = "table";
       } catch (err) {
-        loader.style.display = "none";
-        showMessage("Error de conexión: " + err.message);
-        return null;
+        loader.textContent = "Error al cargar datos";
+        console.error(err);
       }
     }
 
-    function renderTable(users, carrera = null) {
-      if (!users) {
-        showMessage("No hay datos para mostrar");
+    // Mostrar alumnos filtrados
+    function mostrarAlumnos(alumnos) {
+      tablaBody.innerHTML = "";
+      if (alumnos.length === 0) {
+        tablaBody.innerHTML = `<tr><td colspan="4" style="text-align:center; padding:40px; color:#999;">No hay alumnos con esta carrera</td></tr>`;
+        totalAlumnos.textContent = "Total: 0 alumnos";
         return;
       }
 
-      let filteredUsers = Object.values(users);
-      if (carrera) {
-        filteredUsers = filteredUsers.filter(user => user.carrera === carrera);
-      }
-
-      if (filteredUsers.length === 0) {
-        alumnosTableContainer.innerHTML = "<p style='text-align: center; margin: 20px;'>No hay alumnos registrados en esta carrera.</p>";
-        return;
-      }
-
-      let tableHTML = `
-        <table>
-          <thead>
-            <tr>
-              <th>Matrícula</th>
-              <th>Nombre</th>
-              <th>Carrera</th>
-              <th>Correo Institucional</th>
-            </tr>
-          </thead>
-          <tbody>
-      `;
-
-      filteredUsers.forEach(user => {
-        tableHTML += `
-          <tr>
-            <td>${user.matricula || '---'}</td>
-            <td>${user.nombre || '---'}</td>
-            <td>${user.carrera || '---'}</td>
-            <td>${user.email || '---'}</td>
-          </tr>
+      alumnos.forEach(alumno => {
+        const tr = document.createElement("tr");
+        tr.innerHTML = `
+          <td><strong>${alumno.matricula}</strong></td>
+          <td>${alumno.nombre}</td>
+          <td>${alumno.carrera}</td>
+          <td>${alumno.email}</td>
         `;
+        tablaBody.appendChild(tr);
       });
 
-      tableHTML += `
-          </tbody>
-        </table>
-      `;
-
-      alumnosTableContainer.innerHTML = tableHTML;
+      const carreraSeleccionada = selectCarrera.value || "todos";
+      tituloTabla.textContent = carreraSeleccionada === ""
+        ? "Todos los alumnos registrados"
+        : `Alumnos de: ${carreraSeleccionada}`;
+      totalAlumnos.textContent = `Total: ${alumnos.length} alumno${alumnos.length !== 1 ? 's' : ''}`;
     }
 
-    carreraSelect.addEventListener("change", async (e) => {
-      const carrera = e.target.value;
-      const users = await getUsers();
-      renderTable(users, carrera);
+    // Filtrar por carrera
+    selectCarrera.addEventListener("change", () => {
+      const carrera = selectCarrera.value;
+      if (carrera === "") {
+        mostrarAlumnos(todosLosAlumnos);
+      } else {
+        const filtrados = todosLosAlumnos.filter(a => a.carrera === carrera);
+        mostrarAlumnos(filtrados);
+      }
     });
 
-    // Cargar todos los alumnos al inicio
-    (async () => {
-      const users = await getUsers();
-      renderTable(users);
-    })();
+    // Cargar al iniciar
+    cargarAlumnos();
   </script>
 </body>
 </html>
