--- a/lista-alumnos.html
+++ b/lista-alumnos.html
@@ -14,7 +14,11 @@
       --gray: #f1f5f9;
       --text: #1e1b4b;
     }
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
     body {
       font-family: 'Poppins', sans-serif;
       background: linear-gradient(135deg, #0f172a, #1e293b);
@@ -25,11 +29,11 @@
     .container {
       max-width: 1100px;
       margin: 0 auto;
-      background: rgba(255,255,255,0.1);
+      background: rgba(255, 255, 255, 0.1);
       backdrop-filter: blur(20px);
       border-radius: 20px;
       overflow: hidden;
-      box-shadow: 0 20px 50px rgba(0,0,0,0.5);
+      box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
     }
     .header {
       background: linear-gradient(135deg, var(--red-dark), var(--red-main));
@@ -40,7 +44,7 @@
       font-family: 'Bebas Neue', sans-serif;
       font-size: 48px;
       color: var(--gold);
-      text-shadow: 0 4px 20px rgba(0,0,0,0.8);
+      text-shadow: 0 4px 20px rgba(0, 0, 0, 0.8);
     }
     .header p {
       font-size: 18px;
@@ -61,11 +65,14 @@
       border: none;
       background: white;
       color: var(--text);
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
       min-width: 300px;
       cursor: pointer;
     }
-    select:focus { outline: none; box-shadow: 0 0 0 4px rgba(99,102,241,0.3); }
+    select:focus {
+      outline: none;
+      box-shadow: 0 0 0 4px rgba(99, 102, 241, 0.3);
+    }
     h3 {
       text-align: center;
       margin: 30px 0 20px;
@@ -79,7 +86,7 @@
       color: var(--text);
       border-radius: 16px;
       overflow: hidden;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
     }
     th {
       background: var(--red-main);
@@ -118,7 +125,7 @@
     footer {
       text-align: center;
       padding: 30px;
-      color: rgba(255,255,255,0.7);
+      color: rgba(255, 255, 255, 0.7);
       font-size: 14px;
       margin-top: 40px;
     }
@@ -137,7 +144,6 @@
         </label>
         <select id="carreraSelect">
           <option value="">Todas las carreras</option>
-          <!-- Se llenan dinámicamente con JS -->
         </select>
       </div>
       <h3 id="tituloTabla">Todos los alumnos registrados</h3>
@@ -151,25 +157,26 @@
             <th>Correo institucional</th>
           </tr>
         </thead>
-        <tbody id="tablaBody">
-          <!-- Se llena con JS -->
-        </tbody>
+        <tbody id="tablaBody"></tbody>
       </table>
       <div class="total" id="totalAlumnos">Total: 0 alumnos</div>
-    </div>s
+    </div>
     <footer>
       Sistema de Boletos • Graduación 2025<br>
       Desarrollado con amor para la mejor generación
     </footer>
   </div>
   <script>
-    const DB_URL = "https://boletos-66dac-default-rtdb.firebaseio.com/";
+    // URL de Firebase (asegúrate de que termine en /users.json)
+    const DB_URL = "https://boletos-66dac-default-rtdb.firebaseio.com/users.json";
+
     const selectCarrera = document.getElementById("carreraSelect");
     const tablaBody = document.getElementById("tablaBody");
     const tablaAlumnos = document.getElementById("tablaAlumnos");
     const loader = document.getElementById("loader");
     const tituloTabla = document.getElementById("tituloTabla");
     const totalAlumnos = document.getElementById("totalAlumnos");
+
     let todosLosAlumnos = [];
     let conteoCarreras = {};
 
@@ -178,12 +185,15 @@
       try {
         const res = await fetch(DB_URL);
         const data = await res.json();
+
+        console.log("Datos recibidos de Firebase:", data); // Depuración
+
         if (!data) {
-          loader.textContent = "No hay alumnos registrados aún";
+          loader.textContent = "No hay alumnos registrados aún.";
           return;
         }
 
-        // Procesar datos y contar por carrera
+        // Procesar datos de Firebase
         todosLosAlumnos = Object.entries(data).map(([id, info]) => ({
           id,
           matricula: info.matricula || "Sin matrícula",
@@ -191,6 +201,8 @@
           carrera: info.carrera || "No especificada",
           email: info.email || "Sin correo"
         })).sort((a, b) => a.nombre.localeCompare(b.nombre));
+
+        console.log("Alumnos procesados:", todosLosAlumnos); // Depuración
 
         // Contar alumnos por carrera
         conteoCarreras = {};
@@ -200,6 +212,8 @@
           }
           conteoCarreras[alumno.carrera]++;
         });
+
+        console.log("Conteo por carrera:", conteoCarreras); // Depuración
 
         // Llenar el select con carreras y conteo
         const carrerasUnicas = [...new Set(todosLosAlumnos.map(a => a.carrera))];
@@ -214,17 +228,25 @@
         mostrarAlumnos(todosLosAlumnos);
         loader.style.display = "none";
         tablaAlumnos.style.display = "table";
+
       } catch (err) {
-        loader.textContent = "Error al cargar datos";
-        console.error(err);
+        console.error("Error al cargar los datos:", err);
+        loader.textContent = "Error al cargar los datos. Revisa la consola para más detalles.";
       }
     }
 
-    // Mostrar alumnos filtrados
+    // Mostrar alumnos en la tabla
     function mostrarAlumnos(alumnos) {
       tablaBody.innerHTML = "";
+
       if (alumnos.length === 0) {
-        tablaBody.innerHTML = `<tr><td colspan="4" style="text-align:center; padding:40px; color:#999;">No hay alumnos con esta carrera</td></tr>`;
+        tablaBody.innerHTML = `
+          <tr>
+            <td colspan="4" style="text-align:center; padding:40px; color:#999;">
+              No hay alumnos registrados con esta carrera.
+            </td>
+          </tr>
+        `;
         totalAlumnos.textContent = "Total: 0 alumnos";
         return;
       }
@@ -240,10 +262,11 @@
         tablaBody.appendChild(tr);
       });
 
-      const carreraSeleccionada = selectCarrera.value || "todos";
-      tituloTabla.textContent = carreraSeleccionada === ""
-        ? "Todos los alumnos registrados"
-        : `Alumnos de: ${carreraSeleccionada}`;
+      const carreraSeleccionada = selectCarrera.value;
+      tituloTabla.textContent = carreraSeleccionada
+        ? `Alumnos de: ${carreraSeleccionada}`
+        : "Todos los alumnos registrados";
+
       totalAlumnos.textContent = `Total: ${alumnos.length} alumno${alumnos.length !== 1 ? 's' : ''}`;
     }
 
@@ -258,10 +281,8 @@
       }
     });
 
-    // Cargar al iniciar
+    // Iniciar carga de datos
     cargarAlumnos();
   </script>
 </body>
 </html>
-
-
