--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
   <title>Mis Boletos • Graduación 2025</title>
   <link rel="manifest" href="manifest.json">
   <link rel="apple-touch-icon" href="icon-192.png">
-  <meta name="theme-color" content="#002856">
+  <meta name="theme-color" content="#c41b2a">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Bebas+Neue&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.0/build/qrcode.min.js"></script>
   <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
@@ -18,8 +18,6 @@
       --gold: #FFD700;
       --green: #10b981;
       --gray: #f1f5f9;
-      --azul-marino: #002856;
-      --azul-institucional: #0055A5;
     }
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
@@ -36,24 +34,7 @@
     @keyframes gradientBG { 0% { background-position: 0% 50%; } 50% { background-position: 100% 50%; } 100% { background-position: 0% 50%; } }
 
     .container { max-width: 500px; width: 100%; background: rgba(255,255,255,0.15); backdrop-filter: blur(20px); border-radius: 28px; overflow: hidden; box-shadow: 0 20px 50px rgba(0,0,0,0.4); }
-    
-    /* HEADER CON COLORES INSTITUCIONALES */
-    .header { 
-      background: linear-gradient(135deg, var(--azul-marino), var(--azul-institucional)); 
-      color: white; 
-      text-align: center; 
-      padding: 50px 20px 40px; 
-    }
-
-    .logo {
-      width: 110px;
-      height: auto;
-      margin-bottom: 15px;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
+    .header { background: linear-gradient(135deg, #6366f1, #ec4899); color: white; text-align: center; padding: 40px 20px; }
     .header h1 { font-size: clamp(28px, 6vw, 36px); font-weight: 700; margin-bottom: 8px; }
     .content { padding: 40px 30px; background: rgba(255,255,255,0.97); color: #1e1b4b; }
     .profile { background: var(--gray); padding: 20px; border-radius: 16px; text-align: center; margin-bottom: 25px; box-shadow: 0 8px 25px rgba(0,0,0,0.1); }
@@ -102,7 +83,6 @@
 
   <div class="container">
     <div class="header">
-      <img src="uni.png" alt="Universidad Univer Milenium" class="logo">
       <h1>Graduación 2025</h1>
       <p id="welcome">Cargando...</p>
     </div>
@@ -187,7 +167,6 @@
     </div>
   </div>
 
-  <!-- TU SCRIPT 100% ORIGINAL, SIN TOCAR NADA -->
   <script>
     const userNombre = localStorage.getItem('currentUserNombre') || 'Alumno';
     const userMatricula = localStorage.getItem('currentUserMatricula') || '000000';
@@ -203,7 +182,7 @@
 
     const DB_URL = "https://boletos-66dac-default-rtdb.firebaseio.com/";
     const INVENTORY_URL = DB_URL + "inventory.json";
-    const PURCHASES_URL = DB_URL + `users/${userId}/purchases.json`;
+    const PURCHASES_URL = DB_URL + `users/${userId}/purchases.json`; // Esta es la clave
 
     let compras = [];
     let totalCena = 0;
@@ -232,6 +211,7 @@
         document.getElementById('dinnerAvailable').textContent = inventory.dinner || 200;
         document.getElementById('ceremonyAvailable').textContent = inventory.ceremony || 200;
 
+        // Limpiar variables
         compras = [];
         totalCena = 0;
         totalCeremonia = 0;
@@ -244,7 +224,7 @@
           document.getElementById('myPurchases').innerHTML = `
             <div style="background:#d4edda;padding:20px;border-radius:12px;text-align:center;">
               <h3 style="color:#10b981;">¡Ya tienes boletos!</h3>
-              <p><strong>\( {totalCena} Cena + \){totalCeremonia} Ceremonia</strong></p>
+              <p><strong>${totalCena} Cena + ${totalCeremonia} Ceremonia</strong></p>
             </div>
           `;
 
@@ -270,6 +250,7 @@
         const codigo = Math.random().toString(36).substr(2, 9).toUpperCase();
         const compra = { cena, ceremonia, total, codigo, fecha: new Date().toISOString() };
 
+        // Guardar compra
         const res = await fetch(PURCHASES_URL, {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
@@ -278,6 +259,7 @@
 
         if (!res.ok) throw new Error("Error al guardar compra");
 
+        // Actualizar inventario
         const inv = await (await fetch(INVENTORY_URL)).json() || {dinner: 200, ceremony: 200};
         await fetch(INVENTORY_URL, {
           method: 'PATCH',
@@ -287,6 +269,7 @@
           })
         });
 
+        // Recargar todo
         await loadData();
         showMessage('¡Compra realizada con éxito!', 'success');
 
@@ -322,7 +305,7 @@
     document.getElementById('deleteLast').onclick = async () => {
       if (!confirm('¿Eliminar última compra?')) return;
       const ultima = compras[compras.length - 1];
-      await fetch(DB_URL + `users/\( {userId}/purchases/ \){ultima.id}.json`, { method: 'DELETE' });
+      await fetch(DB_URL + `users/${userId}/purchases/${ultima.id}.json`, { method: 'DELETE' });
       const inv = await (await fetch(INVENTORY_URL)).json();
       await fetch(INVENTORY_URL, { method: 'PATCH', body: JSON.stringify({
         dinner: inv.dinner + ultima.cena,
@@ -340,7 +323,7 @@
       document.getElementById('ticketMatricula').textContent = userMatricula;
       document.getElementById('ticketFecha').textContent = fecha;
       document.getElementById('ticketHora').textContent = hora;
-      document.getElementById('ticketBoletos').textContent = `\( {totalCena} Cena + \){totalCeremonia} Ceremonia`;
+      document.getElementById('ticketBoletos').textContent = `${totalCena} Cena + ${totalCeremonia} Ceremonia`;
       document.getElementById('ticketCode').textContent = compra.codigo;
 
       document.getElementById('mainContent').style.display = 'none';
@@ -348,7 +331,7 @@
       document.getElementById('downloadTicket').style.display = 'block';
       document.getElementById('backButton').style.display = 'block';
 
-      const url = `https://ax2004-2003.github.io/Boletos/verificar.html?mat=\( {userMatricula}&code= \){compra.codigo}`;
+      const url = `https://ax2004-2003.github.io/Boletos/verificar.html?mat=${userMatricula}&code=${compra.codigo}`;
       QRCode.toCanvas(document.getElementById('qrCode'), url, { width: 180 });
     }
 
@@ -369,6 +352,7 @@
       setTimeout(() => msg.style.display = 'none', 4000);
     }
 
+    // INICIALIZACIÓN
     calculateTotal();
     loadData();
 
